--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -38,7 +38,7 @@
       <item row="4" column="0">
        <widget class="QPushButton" name="receive">
         <property name="text">
-         <string>Загрузить файл</string>
+         <string>Подключиться</string>
         </property>
        </widget>
       </item>
@@ -66,7 +66,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>20</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
